--- a/FIGMMA/src/main/resources/templates/team/teamList.html
+++ b/FIGMMA/src/main/resources/templates/team/teamList.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head th:replace="~{fragments/base :: head(title=Homepage)}">Hompage</head>
 
 <body>
 	<nav th:replace="~{fragments/base :: navbar}"></nav>
 	
-	<!--Dropdown per il filtraggio della ricerca-->
+	<!-- Dropdown per il filtraggio della ricerca -->
 	<div class="container text-center">
 		<div class="row align-items-start">
 			<div class="col">
@@ -16,17 +17,20 @@
 							<form th:action="@{/team/search}" method="POST" class="mb-3">
 								<div class="row">
 									<div class="col-md-4">
+										<!-- Selezione del tipo -->
 										<select class="form-select" type="text" th:value="${type}" name="type">
 											<option value="team">Team</option>
 											<option value="president">Presidente</option>
 										</select>
 									</div>
 									<div class="col-md-4">
+										<!-- Campo di ricerca -->
 										<input class="form-control" placeholder="Es. fight, Rossi" required type="text" th:value="${attribute}" name="attribute"/>
 									</div>
 									<div class="col-md-4">
+										<!-- Pulsante di invio della ricerca -->
 										<button type="submit" class="btn btn-primary">Cerca</button>
-									</div>
+				ƒ					</div>
 								</div>
 							</form>
 						</div>
@@ -34,24 +38,27 @@
 				</div>
 			</div>
 			<div class="col">
+				<!-- Pulsante per aggiungere un nuovo Team (visibile solo agli amministratori) -->
 				<a sec:authorize="hasAuthority('ADMIN')" type="button" class="btn btn-outline-primary me-2" th:href="@{'/team/add/new'}"> Add new Team</a>
 			</div>
 		</div>
 	</div>
 	
-	
-	
+	<!-- Messaggio se non ci sono Team nel sistema -->
 	<div th:if="${teams.isEmpty()}">Non ci sono Team nel sistema</div>
 	
-	<!--Inizio delle card-->	
+	<!-- Inizio delle card dei Team -->
 	<div class="container text-center">
 		<div class="row ">
 			<div class="col mb-4 d-flex justify-content-center" th:each="team : ${teams}">
 				<div class="card" style="width: 18rem;">
+					<!-- Link alla pagina del Team -->
 					<a class="text-reset text-decoration-none" th:href="@{'/team/' + ${team.id}}">
+						<!-- Immagine del Team -->
 						<img th:if="${team.pathImg != null}" th:src="@{'/images/team/' + ${team.pathImg}}" class="card-img-top" alt="...">
 						<img th:unless="${team.pathImg != null}" src="/images/preset/team.jpg" class="card-img-top" alt="...">
 						<div class="card-body">
+							<!-- Nome del Team e Presidente -->
 							<h5 class="card-title" th:text="${team.name} ">Card title</h5>
 							<p class="card-text" th:text=" 'Presidente: ' + ${team.president.nome} + ' ' +${team.president.cognome}">Typology</p>
 						</div>
@@ -61,7 +68,7 @@
 		</div>
 	</div>
  
- 
-	<footer th:replace="~{fragments/base :: footer}"><footer>
+	<!-- Footer -->
+	<footer th:replace="~{fragments/base :: footer}"></footer>
 </body>
 </html>
