--- a/FIGMMA/src/main/resources/templates/user/president/presidentProfile.html
+++ b/FIGMMA/src/main/resources/templates/user/president/presidentProfile.html
@@ -4,92 +4,102 @@
 <head th:replace="~{fragments/base :: head(title=profile)}">profile</head>
 
 <body>
-	<nav th:replace="~{fragments/base :: navbar}"></nav>
+    <!-- Navbar -->
+    <nav th:replace="~{fragments/base :: navbar}"></nav>
 
+    <div class="container">
+        <div class="row flex-md-row flex-sm-column">
+            <!-- Card del presidente -->
+            <div class="col-md-4 mb-4">
+                <!-- Card del presidente -->
+                <div class="card mx-auto" style="max-width: 18rem;">
+                    <!-- Immagine del presidente -->
+                    <img th:if="${president.pathImg != null}" th:src="@{'/images/profile/' + ${president.pathImg}}"
+                        class="card-img-top" alt="...">
+                    <!-- Immagine di default se l'immagine del presidente non è disponibile -->
+                    <img th:unless="${president.pathImg != null}" src="/images/preset/profile.jpg" class="card-img-top"
+                        alt="...">
 
-	<div class="container">
-		<div class="row flex-md-row flex-sm-column">
-			<!--Card del presidente-->
-			<div class="col-md-4 mb-4">
-				<div class="card mx-auto" style="max-width: 18rem;">
-					<img th:if="${president.pathImg != null}" th:src="@{'/images/profile/' + ${president.pathImg}}" class="card-img-top" alt="...">
-					<img th:unless="${president.pathImg != null}" src="/images/preset/profile.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <!-- Nome e cognome del presidente -->
+                        <h5 class="card-title" th:text="${president.nome} + ' ' + ${president.cognome}">Card title</h5>
+                    </div>
 
-					<div class="card-body">
-						<h5 class="card-title" th:text="${president.nome} + ' ' + ${president.cognome}">Card title</h5>
-					</div>
+                    <!-- Dettagli del presidente -->
+                    <ul class="list-group list-group-flush">
+                        <!-- Luogo di nascita del presidente -->
+                        <li class="list-group-item"> Nato a:
+                            <p th:text="'Regione: ' + ${president.site.country}"> Regione </p>
+                            <p th:text="'Città: ' + ${president.site.City}"> città </p>
+                            <p th:text="'Cap: ' + ${president.site.cap}"> cap </p>
+                        </li>
 
-					<ul class="list-group list-group-flush">
-						<li class="list-group-item"> Nato a:
-							<p th:text="'Regione: ' + ${president.site.country}"> Regione </p>
-							<p th:text="'Città: ' + ${president.site.City}"> città </p>
-							<p th:text="'Cap: ' + ${president.site.cap}"> cap </p>
-						</li>
+                        <!-- Data di nascita del presidente -->
+                        <li class="list-group-item" th:text="'Nato il: ' + ${president.dateOfBirth}"> data di nascita
+                        </li>
+                    </ul>
+                </div>
+            </div>
 
-						<li class="list-group-item" th:text="'Nato il: ' + ${president.dateOfBirth}"> data di nascita</li>
+            <!-- Card del Team -->
+            <div class="col-md-4 mb-4" th:if="${president.team != null}">
+                <!-- Titolo della sezione -->
+                <h2>Team</h2>
+                <!-- Card del Team -->
+                <div class="card mx-auto" style="max-width: 18rem;">
+                    <!-- Immagine del Team -->
+                    <img th:if="${president.team.pathImg != null}"
+                        th:src="@{'/images/team/' + ${president.team.pathImg}}" class="card-img-top" alt="...">
+                    <!-- Immagine di default se l'immagine del Team non è disponibile -->
+                    <img th:unless="${president.team.pathImg != null}" src="/images/preset/team.jpg"
+                        class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <!-- Nome del Team -->
+                        <h5 class="card-title" th:text="'Team: ' + ${president.team.name}">Card title</h5>
+                    </div>
 
-					</ul>
-				</div>
-			</div>
-			
-			
-			
-			<!--Team card-->
-			<div class="col-md-8 mb-4">
+                    <!-- Dettagli del Team -->
+                    <ul class="list-group list-group-flush">
+                        <!-- Sede del Team -->
+                        <li class="list-group-item"> Situata in :
+                            <p th:text="'Regione: ' + ${president.team.site.country}"> Regione </p>
+                            <p th:text="'Città: ' + ${president.team.site.City}"> città </p>
+                            <p th:text="'Cap: ' + ${president.team.site.cap}"> cap </p>
+                        </li>
 
-				<!--Inizio delle card-->				
-				<div class="row text-center">
-				
-					<div class="col mb-4 d-flex justify-content-center" th:if="${president.team==null}">
-						<h2>Non sei ancora in possesso di un team</h2>
-					</div>
-					
-					<div th:unless="${president.team==null}">
-						<h2>Team</h2>
-	
-						<div class="col mb-4 d-flex justify-content-center">
-							<div class="card mx-auto" style="width: 18rem;">
-								<img th:if="${president.team.pathImg != null}" th:src="@{'/images/team/' + ${president.team.pathImg}}" class="card-img-top" alt="...">
-								<img th:unless="${president.team.pathImg != null}" src="/images/preset/team.jpg" class="card-img-top" alt="...">
-								<div class="card-body">
-									<h5 class="card-title" th:text="'Team: ' + ${president.team.name}">Card title</h5>
-								</div>
-	
-								<ul class="list-group list-group-flush">
-									<li class="list-group-item"> Situata in :
-										<p th:text="'Regione: ' + ${president.team.site.country}"> Regione </p>
-										<p th:text="'Città: ' + ${president.team.site.City}"> città </p>
-										<p th:text="'Cap: ' + ${president.team.site.cap}"> cap </p>
-									</li>
-	
-									<li class="list-group-item" th:text="'Fondata il : ' + ${president.team.dateOfCreation}"> data di nascita</li>
-								</ul>
-							</div>
-						</div>
-	
-						<!--Inizio della sezione atleti-->
-						<div class="col-md-6 mb-4 d-flex flex-column align-items-center">
-							<h4>Atleti</h4>
-							<div class="d-flex justify-content-between">
-								<a type="button" class="btn btn-outline-primary me-2" th:href="@{'/team/editAthletes/' + ${president.team.id}}">Edit Athletes Team</a>
-							</div>
-							<ol class="list-group list-group-numbered" th:each="athlete : ${president.team.athletes}">
-								<li class="list-group-item">
-									<span th:text="${athlete.name} +' '+${athlete.surname}">Nome e cognome atleta</span>
-									<a type="button" class="btn btn-outline-primary me-2" th:href="@{'/athlete/' + ${athlete.id}}">Profilo Atleta</a>
-								</li>
-							</ol>
-	
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+                        <!-- Data di creazione del Team -->
+                        <li class="list-group-item" th:text="'Fondata il : ' + ${president.team.dateOfCreation}"> data
+                            di nascita
+                        </li>
+                    </ul>
+                </div>
+            </div>
 
+            <!-- Sezione degli Atleti -->
+            <div class="col-md-4 mb-4" th:if="${president.team != null}">
+                <!-- Titolo della sezione -->
+                <h4>Atleti</h4>
+                <!-- Pulsante per modificare gli atleti del Team -->
+                <div class="d-flex justify-content-between">
+                    <a type="button" class="btn btn-outline-primary me-2"
+                        th:href="@{'/team/editAthletes/' + ${president.team.id}}">Edit Athletes Team</a>
+                </div>
+                <!-- Lista degli Atleti del Team -->
+                <ol class="list-group list-group-numbered" th:each="athlete : ${president.team.athletes}">
+                    <li class="list-group-item">
+                        <!-- Nome e Cognome dell'Atleta -->
+                        <span th:text="${athlete.name} +' '+${athlete.surname}">Nome e cognome atleta</span>
+                        <!-- Link al profilo dell'Atleta -->
+                        <a type="button" class="btn btn-outline-primary me-2"
+                            th:href="@{'/athlete/' + ${athlete.id}}">Profilo Atleta</a>
+                    </li>
+                </ol>
+            </div>
+        </div>
+    </div>
 
-
-	<footer th:replace="~{fragments/base :: footer}"><footer>
+    <!-- Footer -->
+    <footer th:replace="~{fragments/base :: footer}"></footer>
 
 </body>
 
